Updated href tags

--- a/manager/templates/base.html
+++ b/manager/templates/base.html
@@ -27,13 +27,13 @@
                         </a>
                       </li>
                   <li>
-                    <a href="#" class="nav-link text-white">
+                    <a href="/todays_tasks" class="nav-link text-white">
                       <svg class="bi me-2" width="16" height="16"><use xlink:href="#home"/></svg>
                       Today's Tasks
                     </a>
                   </li>
                   <li>
-                    <a href="#" class="nav-link text-white">
+                    <a href="/weeks_tasks" class="nav-link text-white">
                       <svg class="bi me-2" width="16" height="16"><use xlink:href="#speedometer2"/></svg>
                       This Week's Schedule
                     </a>
