Updated taking date input in add_task html file

--- a/manager/templates/add_task.html
+++ b/manager/templates/add_task.html
@@ -8,12 +8,17 @@
         <div class="form-group">
           <label for="Title"> Title </label>
           <input type="text" class="form-control" id="Title" aria-describedby="emailHelp" placeholder="Enter Task name" name = "Title">
-          
         </div>
+
         <div class="form-group">
           <label for="Description">Description</label>
           <input type="text" class="form-control" id="Description" placeholder="Description of task" name = "Description">
         </div>
+        
+        <div class = "form-group">
+          <label for="birthdaytime">Birthday (date and time):</label>
+          <input type="datetime-local" id="birthdaytime" name="birthdaytime">
+       </div>
         
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
