--- a/manager/templates/edit_task.html
+++ b/manager/templates/edit_task.html
@@ -7,16 +7,17 @@
     <form action="{{url_for('lister.Edit_tasks', id = id)}}" method="POST" style = "top:0; margin: 195px 0px 0px 270px; position: absolute; padding: 20px 20px 20px 20px;">
         <div class="form-group" style = "padding: 20px 20px 20px 20px; width: 1000px;">
           <label for="Title"> Title </label>
-          <textarea type="text" class="form-control" id="Title" aria-describedby="emailHelp" placeholder="Enter Task name" name = "Title" style = "height:40px;">
-            {{Title}}
-          </textarea>
+          <textarea type="text" class="form-control" id="Title" 
+                placeholder="Enter Task name" name = "Title" style = "height:40px;"> {{Title}} </textarea>
+            
         </div>
 
         <div class="form-group" style = "padding: 20px 20px 20px 20px;">
           <label for="Description">Description</label>
-          <textarea type="text" class="form-control" id="Description" placeholder="Description of task" name = "Description" id="exampleFormControlTextarea1" rows="3">
-              {{Description}}
-          </textarea>
+          <textarea type="text" class="form-control" id="Description" placeholder="Description of task" 
+            name = "Description" id="exampleFormControlTextarea1" rows="3"> {{Description}} </textarea>
+            <!-- text area is displayed like this to avoid blank spaces in the website-->
+              
         </div>
         
         <div class = "form-group" style = "padding: 20px 20px 20px 20px;">
