--- a/manager/templates/base.html
+++ b/manager/templates/base.html
@@ -21,7 +21,7 @@
                 <hr>
                 <ul class="nav nav-pills flex-column mb-auto">
                     <li>
-                        <a href="/homepage" class="nav-link text-white">
+                        <a href="/" class="nav-link text-white">
                           <svg class="bi me-2" width="16" height="16"><use xlink:href="#home"/></svg>
                           Home Page
                         </a>
