Modified this template to handle weeks tasks, daily tasks and alerts/overdues page without using index.html file

--- a/manager/templates/home_page.html
+++ b/manager/templates/home_page.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block body %}
 
-<h4 class="tasks display-4" style = "text-align: center; color: rgb(236, 79, 79);"> Alerts/Overdues </h4>
+<h4 class="tasks display-4" style = "text-align: center; color: rgb(236, 79, 79);"> {{heading}} </h4>
 <div style = "top:0; margin: 195px 0px 0px 270px; position: absolute; padding: 10px 10px 10px 10px;">
        
     {% for id, day, time, task, description, page in values %}
@@ -22,18 +22,6 @@
   </form>
  
 </div>
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 {% endblock %}
